Fixed layout bug

--- a/app/assets/stylesheets/layout.css.less
+++ b/app/assets/stylesheets/layout.css.less
@@ -1,4 +1,4 @@
-d#left_sidebar, #right_sidebar, #main_content{
+#left_sidebar, #right_sidebar, #main_content{
   position: relative;
 }
 
